--- a/HW2/Saved/Config/WindowsEditor/Engine.ini
+++ b/HW2/Saved/Config/WindowsEditor/Engine.ini
@@ -48,3 +48,8 @@ EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
 
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+JavaPath=(Path="")
+
